<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_3pontos"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:background="#FF9633"
        android:text="@string/button3pontos"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/button_3pontos3"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:background="#FF9633"
        android:text="@string/button3pontos"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/button_2pontos"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:background="#FF9633"
        android:text="@string/button2pontos"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_3pontos"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/button_2pontos2"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginTop="284dp"
        android:background="#FF9633"
        android:text="@string/button2pontos"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/button_tirolivre"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:background="#FF9633"
        android:text="@string/buttontirolivre"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_2pontos"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/button_tirolivre2"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:background="#FF9633"
        android:text="@string/buttontirolivre"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_2pontos2"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/button_resultado"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:background="#FF9633"
        android:text="@string/resultado"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/numa0"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/numa"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/numb0"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/numb"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toEndOf="@+id/numa0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="69dp"
        android:layout_height="27dp"
        android:text="@string/time1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.220"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/reset"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:background="#FF9633"
        android:text="Resetar"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="400sp"
        android:background="#040200"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintEnd_toStartOf="@+id/button_3pontos3"
        app:layout_constraintStart_toEndOf="@+id/button_3pontos"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>